--- a/css/style.css
+++ b/css/style.css
@@ -174,7 +174,7 @@ color: rgba(0,0,0,.9);
 .picker:nth-child(6) {
   color: var(--color6);
 }
-.currentPick {
+.picker.currentPick {
   font-size: 140%;
 }
 
@@ -221,7 +221,6 @@ color: rgba(0,0,0,.9);
 
 /* 'guess' class represents each of the 8 rows on game board */
 .board .guess {
-  margin: 8px auto;
   text-align: left;
 }
 .slot {
@@ -316,7 +315,6 @@ color: rgba(0,0,0,.9);
   height: 50%;
 }
 .pegSlot {
-  padding: 2px;
   width: calc(50% - 2.5px);
   height:calc(100% - 2.5px);
   display:inline-block;
@@ -584,13 +582,11 @@ color: rgba(0,0,0,.9);
 }
 .msg h2 { 
   color:deeppink; 
-  font-family: 'Luckiest+Guy', cursive;
-  font-size: 2em;
+  font-family: 'Luckiest Guy', cursive;
 }
 .msg h1 {
   margin-top: 35px;
-  font-family: 'Luckiest+Guy', cursive;
-  font-size: 3em;
+  font-family: 'Luckiest Guy', cursive;
 }
 
 /*Adapted from Mark Senff's example http://codepen.io/senff/pen/fqmFo*/
@@ -628,23 +624,34 @@ color: rgba(0,0,0,.9);
 /*xs screen*/
 @media (min-width: 0px) {
   body {
-    font-size: 12px;
+    font-size: 10px;
+  }
+  small {
+    font-size: 10px;  
   }
   .palette .picker, .palette .dupl {
     max-width: 20px;
   }
   .palette {
-    width: 20%;
+    width: 15%;
   }
   .board {
-    width: 80%;
+    width: 85%;
   }
   .instructions.showThis, .openIt.showThis {
     display: none;
   }
   .slot, .board .pegs {
-    width: 4vh;
-    height: 4vh;
+    height: 8vh;
+  }
+  .board .pegs {
+    width: 8vh;
+  }
+  .slot {
+    width: 7vh;
+  }
+  .pegSlot {
+    padding: 0;
   }
   .palette, .board {
     padding: 2vh 1vh;
@@ -652,6 +659,9 @@ color: rgba(0,0,0,.9);
   .board .showSolution p {
     width:22vh;
     font-size: 80%;
+  }
+  .board .guess {
+    margin: 10px auto;
   }
   .peg {
     border-width: 1px;
@@ -680,12 +690,18 @@ color: rgba(0,0,0,.9);
   .about h4 {
     padding: 0;
   }
+  .msg h2, .msg h1, .msg h3 { 
+    font-size: 1.2em;
+  }
 }
 
 /*sm screen*/
 @media (min-width: 576px) {
   body {
     font-size: 14px;
+  }
+  small {
+    font-size: inherit;  
   }
   .palette .picker, .palette .dupl {
     max-width: 100px;
@@ -698,8 +714,17 @@ color: rgba(0,0,0,.9);
     width: 70%;
   }
   .slot, .board .pegs {
-    width: 8vh;
     height: 8vh;
+  }
+  .board .pegs {
+    width: 8vh;
+  }
+  .slot {
+    width: 6vw;
+    max-width: 8vh;
+  }
+  .pegSlot {
+    padding: 2px;
   }
   .palette, .board {
     padding: 2vh 3vh;
@@ -707,6 +732,9 @@ color: rgba(0,0,0,.9);
   .board .showSolution p {
     width:36vh;
     font-size: 120%;
+  }
+  .board .guess {
+    margin: 8px auto;
   }
   .peg {
     border-width: 2px;
@@ -734,6 +762,12 @@ color: rgba(0,0,0,.9);
   .pointDown {
     display:none;
   }
+  .msg h2 { 
+    font-size: 2em;
+  }
+  .msg h1 {
+    font-size: 3em;
+  }
 }
 
 /*md screen*/
@@ -760,8 +794,15 @@ color: rgba(0,0,0,.9);
     display: none;
   }
   .slot, .board .pegs {
-    width: 9vh;
     height: 9vh;
+  }
+/*   all these variations to get vertical & horiz tablet to work ok*/
+  .board .pegs {
+    width: 9vh;
+  }
+  .slot {
+    width: 6vw;
+    max-width: 9vh;
   }
   .palette, .board {
     padding: 5vh 5vh;
